# arteci-challenge

./: .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  casting.yaml  docker-compose.yml  otel-collector-config.yaml  requirements.txt
.github/workflows/: deploy.yml
api/src/: main.py  seed_data.py
api/src/parsers/: date_parser.py  polars_date_engine.py
benchmarks/: bench_pandas_polars.py  bench_pandas_polars_rust.py  bench_pandas_polars_rust.y_backup.py  results.md
k8s/: api.yaml  minio.yaml  seed-job.yaml
pours/deployment/: compose.yaml
pours/deployment/ingester/: ingester.yaml  opamp.yaml
pours/deployment/telemetrykeeper/clickhousekeeper/: keeper-0.yaml
pours/deployment/telemetrystore/clickhouse/: config-0-0.yaml  functions.yaml
rust-parser/: Cargo.toml
rust-parser/src/: main.rs
tests/: test_date_parser.py
