[package]
name = "arteci-api-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Client AWS SDK compatible avec MinIO
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.1"